# auto_shutdown

./: Cargo.toml  config.yml
locales/: en.yaml  zh-CN.yaml
src/: main.rs
