[package]
name = "auto_shutdown"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clokwerk = "0.4.0"
config = "0.15.11"
ctrlc = "3.4.7"
native-dialog = "0.9.0"
rust-i18n = "3.1.4"
system_shutdown = "4.0.1"

[package.metadata.i18n]
available-locales = ["en", "zh-CN"]

[features]
default = []
do_not_really_shutdown = []
